acvus-mir-test/tests/snapshots/all__script__branch_context_write_in_refutable.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @val
     3 |   r3 = fetch @out
     4 |   r4 = test r2 == 42
     5 |   if r4 -> L0 else L1(r3) join L1
     6 | L0:
     8 |   jump L1(99 (r5))
     9 | L1(r6: i64):
    11 |   commit @val = r2
    12 |   commit @out = r6
    13 |   return r6

    ; r0 (v12) : i64
    ; r1 (v13) : i64
    ; r2 (@val) : i64
    ; r3 (@out) : i64
    ; r4 (v6) : Bool
    ; r5 (v7) : i64
    ; r6 (v14) : i64
    ; r7 (@out) : i64
    ; r8 (v11) : i64
    ; r9 (@out) : i64
    ; r10 (@val) : i64
    ; r11 (v15) : i64
    ; r12 (v10) : i64
    ; r13 (v5) : i64
    ; r14 (v8) : Unit
