acvus-mir-test/tests/snapshots/all__script__branch_destructure_object.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     3 |   r3 = fetch @user
     4 |   assign @user = r3
     5 |   r4 = take @user.name
     6 |   r5 = take @user.age
     8 |   r6 = take @user
     9 |   commit @user = r6
    10 |   r7 = string_clone r4
    11 |   commit @out = r7
    12 |   return r4

    ; r0 (v14) : String
    ; r1 (v15) : String
    ; r2 (v16) : i64
    ; r3 (@user) : {age: i64, name: String}
    ; r4 (name) : String
    ; r5 (age) : i64
    ; r6 (v12) : {age: i64, name: String}
    ; r7 (v17) : String
    ; r8 (@out) : String
    ; r9 (@out) : String
    ; r10 (name) : String
    ; r11 (name) : String
    ; r12 (@user) : {age: i64, name: String}
    ; r13 (v10) : Unit
    ; r14 (v13) : String
    ; r15 (age) : i64
