acvus-mir-test/tests/snapshots/all__script__branch_simple_bind.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     3 |   r3 = fetch @data
     5 |   r4 = r3 + 1 (r5)
     7 |   commit @data = r3 (not written)
     8 |   commit @out = r4
     9 |   return r4

    ; r0 (v14) : i64
    ; r1 (v15) : i64
    ; r2 (v16) : i64
    ; r3 (@data) : i64
    ; r4 (v9) : i64
    ; r5 (v8) : i64
    ; r6 (@out) : i64
    ; r7 (@out) : i64
    ; r8 (x) : i64
    ; r9 (@data) : i64
    ; r10 (v12) : i64
    ; r11 (x) : i64
    ; r12 (v10) : Unit
    ; r13 (v13) : i64
    ; r14 (x) : i64
