acvus-mir-test/tests/snapshots/all__script__func_pipe_chain.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 |   r0 = array_begin capacity=3
     2 |   r1 = array_push r0 1 (r2)
     4 |   r3 = array_push r1 2 (r4)
     6 |   r5 = array_push r3 3 (r6)
     7 |   r7 = call #0(r5)
     8 |   r8 = closure L0 []
     9 |   r9 = call #1(r7, r8)
    10 |   r10 = call #2(r9)
    11 |   return r10

    ; r0 (v1) : Array<i64, 0>
    ; r1 (v3) : Array<i64, 1>
    ; r2 (v2) : i64
    ; r3 (v5) : Array<i64, 2>
    ; r4 (v4) : i64
    ; r5 (v7) : Array<i64, 3>
    ; r6 (v6) : i64
    ; r7 (into_iter(...)) : Items<i64>
    ; r8 (v9) : Fn(&i64) -> Bool
    ; r9 (filter(...)) : Filter<Items<i64>, i64, Pure>
    ; r10 (collect(...)) : Vec<i64>

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = take (*r2)
     3 |   r3 = r1 > 0 (r4)
     4 |   return r3

    ; r0 (v7) : &i64
    ; r1 (v4) : i64
    ; r2 (v1) : &i64
    ; r3 (v6) : Bool
    ; r4 (v5) : i64
    ; r5 (x) : &i64
    ; r6 (x) : &i64
