acvus-mir-test/tests/snapshots/all__script__func_to_string_in_bind.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @val
     1 |   assign @val = r0
     2 |   r1 = ref &@val
     3 |   r2 = call #0(r1)
     4 |   r3 = take @val
     5 |   commit @val = r3
     6 |   return r2

    ; r0 (@val) : i64
    ; r1 (@val.) : &i64
    ; r2 (to_string(...)) : String
    ; r3 (v5) : i64
    ; r4 (@val) : i64
