acvus-mir-test/tests/snapshots/all__script__loop_context_write_phi.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @items
     1 |   assign @items = r0
     2 |   r1 = fetch @count
     3 |   assign @count = r1
     4 |   r2 = take @items
     5 |   r3 = call #0(r2)
     6 |   assign it = r3
     7 |   jump L0
     8 | L0:
     9 |   r4 = ref &mut it
    10 |   r5 = call #1(r4)
    11 |   r6 = test r5 is Some
    12 |   jump_if r6 then L1 else L2
    13 | L1:
    14 |   r7 = unwrap r5
    15 |   assign x = r7
    16 |   r8 = take @count
    18 |   r9 = r8 + 1 (r10)
    19 |   assign @count = r9
    20 |   jump L0
    21 | L2:
    22 |   r11 = take @count
    23 |   r12 = take @items
    24 |   commit @items = r12 (not written)
    25 |   r13 = take @count
    26 |   commit @count = r13
    27 |   return r11

    ; r0 (@items) : Array<i64, 3>
    ; r1 (@count) : i64
    ; r2 (@items) : Array<i64, 3>
    ; r3 (into_iter(...)) : Items<i64>
    ; r4 (it.) : &mut Items<i64>
    ; r5 (next(...)) : Option<i64>
    ; r6 (v10) : Bool
    ; r7 (x) : i64
    ; r8 (@count) : i64
    ; r9 (v15) : i64
    ; r10 (v14) : i64
    ; r11 (@count) : i64
    ; r12 (v17) : Array<i64, 3>
    ; r13 (v18) : i64
    ; r14 (@count) : i64
    ; r15 (@items) : Array<i64, 3>
    ; r16 (x) : i64
    ; r17 (it) : Items<i64>
