acvus-mir-test/tests/snapshots/all__script__ssa_sequential_writes.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @x
     5 |   commit @x = 3 (r2)
     6 |   return 3 (r2)

    ; r0 (v8) : i64
    ; r1 (@x) : i64
    ; r2 (v5) : i64
    ; r3 (v3) : i64
    ; r4 (v7) : i64
    ; r5 (@x) : i64
    ; r6 (@x) : i64
    ; r7 (v4) : i64
