acvus-mir-test/tests/snapshots/all__script__ssa_write_in_branch_phi.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @x
     3 |   r3 = fetch @cond
     4 |   r4 = test r3 == 42
     5 |   if r4 -> L0 else L1(r2) join L1
     6 | L0:
     8 |   jump L1(1 (r5))
     9 | L1(r6: i64):
    11 |   commit @x = r6
    12 |   commit @cond = r3 (not written)
    13 |   return r6

    ; r0 (v12) : i64
    ; r1 (v13) : i64
    ; r2 (@x) : i64
    ; r3 (@cond) : i64
    ; r4 (v6) : Bool
    ; r5 (v7) : i64
    ; r6 (v14) : i64
    ; r7 (@cond) : i64
    ; r8 (v11) : i64
    ; r9 (@x) : i64
    ; r10 (@x) : i64
    ; r11 (v15) : i64
    ; r12 (v10) : i64
    ; r13 (v5) : i64
    ; r14 (v8) : Unit
